# guide_self_api

./: .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
docker/django/: Dockerfile
docker/nginx/: Dockerfile
docker/postgres/: Dockerfile  init.sh
environments/: template.env
src/: manage.py
src/core/: api.py  settings.py  urls.py
src/core/settings/: __init__.py  base.py  baton.py  database.py  environments.py
src/travels/: admin.py  api.py  models.py  schemas.py  validators.py
src/travels/migrations/: 0001_initial.py  0002_info.py  0003_alter_info_options_image.py  0004_extraimage_mainimage.py  0005_country.py  0006_city.py  0007_placetype.py  0008_place.py  0009_alter_place_latitude_alter_place_longitude.py  0010_rout.py  0011_routpoint.py  0012_journey.py  0013_remove_info_descr_info_full_descr_and_more.py
src/travels/services/: file_uploader.py
src/travels/tests/: test_api.py  test_models.py  test_schemas.py  test_validators.py
src/travels/tests/servise_tests/: test_file_uploader.py
src/utils/: models.py
src/utils/tests/: __init__.py  test_models.py
