[tool.poetry]
name = "Guide Self API"
version = "0.0.1"
description = ""
authors = ["BRANYA43 <bogdan.timchenko.2504@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-baton = "^4.1.0"
django-split-settings = "^1.3.2"
django-ninja = "^1.2.2"
pillow = "^10.4.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
force-exclude = true
extend-exclude = ['migrations']
extend-select = ['T20']

[tool.ruff.format]
quote-style = "single"


[tool.mypy]
exclude = ['migrations', 'venv', 'cache']
no_implicit_optional = false
ignore_missing_imports = true
